[TASK] Correct tile spacing for image/video

--- a/Resources/Public/Scss/ThemeMain/Elements/_tile.scss
+++ b/Resources/Public/Scss/ThemeMain/Elements/_tile.scss
@@ -81,7 +81,7 @@
 //
 // Content padding
 //
-.pp-tile:not(.pp-type-image):not(.pp-type-media):not(.pp-type-external_media):not(.pp-ce-overlaycard) {
+.pp-tile:not(.pp-type-image):not(.pp-type-media):not(.pp-type-external_media):not(.pp-ce-overlaycard):not(.pp-type-pp_picoverlay) {
   .frame-inner {
     margin: $table-cell-padding;
   }
@@ -91,6 +91,12 @@
 // Images
 //
 .pp-tile {
+  &.pp-type-image, &.pp-type-pp_picoverlay, &.pp-ce-overlaycard {
+    .frame-container {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
   .gallery-row:last-child {
     margin-bottom: 0;
   }
@@ -112,6 +118,10 @@
 //
 .pp-tile {
   &.pp-type-media, &.pp-type-external_media {
+    .frame-container {
+      padding-left: 0;
+      padding-right: 0;
+    }
     .frame-inner {
       width: 100%;
     }
